chore: Adiciona templates GitHub e melhora .gitignore
- Adiciona templates de issue (bug report e feature request)
- Adiciona template de pull request
- Adiciona cÃ³digo de conduta e guia de contribuiÃ§Ã£o
- Melhora .gitignore com mais padrÃµes
- Nota: GitHub Actions requer token com permissÃ£o 'workflow'

--- a/.gitignore
+++ b/.gitignore
@@ -7,25 +7,46 @@
 
 # testing
 /coverage
+*.test.js
+*.test.ts
+*.test.tsx
+*.spec.js
+*.spec.ts
+*.spec.tsx
 
 # next.js
 /.next/
 /out/
+/.swc/
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
 *.pem
+*.log
+*.lock
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 # local env files
+.env
 .env*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
@@ -36,4 +57,24 @@ next-env.d.ts
 
 # PDF files
 *.pdf
+
+# OS files
+Thumbs.db
+.DS_Store
+Desktop.ini
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
 
