fix: Corrige erro 'self is not defined' no build do Vercel
- Melhora polyfills para definir self antes de tudo
- Adiciona ProvidePlugin do webpack para injetar self
- Melhora plugin customizado para substituir self no cÃ³digo gerado
- Adiciona vercel-build-fix.js como script de build customizado
- Atualiza vercel.json para usar script customizado
- Adiciona VERIFICACAO_NOME_PROJETO.md

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "estimulus-site",
+  "name": "estimulus-site-novo",
   "version": "0.1.0",
   "description": "Site institucional da Estimulus desenvolvido com Next.js, TypeScript e Tailwind CSS",
   "private": true,
@@ -25,6 +25,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "vercel-build": "node vercel-build-fix.js",
     "start": "next start",
     "lint": "next lint",
     "precheck": "node scripts/precheck.js",
