--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@types/nodemailer": "^7.0.3",
+    "@vercel/speed-insights": "^1.2.0",
     "next": "^13.5.6",
     "nodemailer": "^7.0.10",
     "react": "^18.3.1",
